deployment-main.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locust
spec:
  selector:
    matchLabels:
      app: locust
  template:
    metadata:
      labels:
        app: locust
    spec:
      containers:
        - name: locust
          image: malacration/locust
          command: ["locust"]
          args: ["-f", "/home/locust/locustfile.py", "--master"]
          ports:
            - containerPort: 8089
          volumeMounts:
            - mountPath: /home/locust/locustfile.py
              name: locust-script
              subPath: locustfile.py
            - mountPath: /home/locust/requirements.txt
              subPath: requirements.txt
              name: requirements
          imagePullPolicy: IfNotPresent
      volumes:
        - name: locust-script
          configMap:
            name: locust-script
        - name: requirements
          configMap:
            name: requirements
